created ui to play video and added dimen & string values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">SilverOrange_Assessment</string>
+    <string name="toolbar_name">Video Player</string>
 </resources>
